...
            android:layout_below="@id/textview_seller_product"
            android:text="R$ 100,00"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/imageview_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_forever_black_24dp"
            android:visibility="gone"
            android:padding="5dip"
            android:layout_marginEnd="14dp"
...
