...
                android:layout_width="match_parent">

                <Button
                    android:id="@+id/btn_adiciona_carrinho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Adicionar ao carrinho" />

                <Button
                    android:id="@+id/btn_remove_carrinho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Remover do carrinho" />
...
