<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/content_card_payment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textview_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginStart="5dip"
            android:text="Total da Compra: R$ 2.000"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/card_number_Wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/edittext_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/card_number"
                android:inputType="number"
                android:maxLength="16"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_holder_Wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/edittext_name_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/card_name_holder"
                android:inputType="textCapSentences"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">

            <TextView
                android:id="@+id/textview_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:text="@string/card_expiration_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linear_expiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dip">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/month_Wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dip"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edittext_month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/month"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"

                        android:textColorHint="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/year_Wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dip"
                    android:layout_weight="1"
                    android:textColorHint="@color/colorPrimaryDark">

                    <EditText
                        android:id="@+id/edittext_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:hint="@string/year"
                        android:inputType="number"
                        android:maxLength="2"
                        android:maxLines="1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textColorHint="@color/colorPrimaryDark" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cvv_Wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear_expiration"
                android:layout_marginBottom="15dp"
                android:textColorHint="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/edittext_cvv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/cvv"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buy_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dip"
            android:backgroundTint="@color/colorAccent"
            android:text="Finalizar Compra"
            android:textColor="@color/white" />
    </LinearLayout>

    <include layout="@layout/layout_progress_payment" android:id="@+id/relative_progress"/>


</RelativeLayout>